# agent-cli-sdk

./: CHANGELOG.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml  release.yml
src/agent_sdk/: __init__.py
src/agent_sdk/core/: agent.py  driver.py  types.py
src/agent_sdk/drivers/: cli_json_driver.py  copilot_driver.py  gemini_driver.py  mock_driver.py
src/agent_sdk/utils/: jsonrpc.py  schema.py  url.py
tests/: test_url_parsing.py
