[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_sdk"]

[project]
name = "agent-cli-sdk"
version = "0.1.0"
description = "Universal SDK for interacting with AI Agent CLIs (Gemini, Copilot, etc.)"
readme = "README.md"
authors = [
    { name = "Agent CLI SDK Contributors", email = "noreply@github.com" }
]
license = { file = "LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pydantic>=2.0",
]

[project.urls]
Homepage = "https://github.com/rbbtsn0w/agent-cli-sdk"
Repository = "https://github.com/rbbtsn0w/agent-cli-sdk"
Issues = "https://github.com/rbbtsn0w/agent-cli-sdk/issues"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
    "pytest-timeout",
    "pytest-cov",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"
asyncio_mode = "auto"
